[gd_scene load_steps=7 format=3 uid="uid://dt5ahf3uukx5o"]

[ext_resource type="Script" path="res://scripts/BaseCharacter.gd" id="1_00iuh"]
[ext_resource type="Texture2D" uid="uid://cqqk0cyja4kwe" path="res://resources/arrows.png" id="2_55k2c"]

[sub_resource type="Animation" id="Animation_dly2n"]
resource_name = "move_arrows"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arrows:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.01, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.5, 0.5, 0.5), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Arrows:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.5708, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0ajb3"]
_data = {
"move_arrows": SubResource("Animation_dly2n")
}

[sub_resource type="Curve3D" id="Curve3D_5vnbr"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 0, 9.675, 6.045, 0, 1.455, 1.61, 0, 0, 0, 0, 3.515, 2.44),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="CapsuleMesh" id="CapsuleMesh_kvtkm"]
radius = 0.1
height = 0.2

[node name="BaseCharacter" type="CharacterBody3D" groups=["players"]]
script = ExtResource("1_00iuh")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 1.5

[node name="AllAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0ajb3")
}

[node name="ArrowsTransform" type="RemoteTransform3D" parent="."]
transform = Transform3D(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
top_level = true
remote_path = NodePath("../Arrows")

[node name="Arrows" type="Sprite3D" parent="."]
transform = Transform3D(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
top_level = true
texture = ExtResource("2_55k2c")

[node name="CameraTransform" type="RemoteTransform3D" parent="."]
remote_path = NodePath("../Path3D")

[node name="Path3D" type="Path3D" parent="."]
top_level = true
curve = SubResource("Curve3D_5vnbr")

[node name="PathFollow3D" type="PathFollow3D" parent="Path3D"]
transform = Transform3D(1, 0, 0, 0, 0.999984, 0, 0, 0, 0.999984, 0, 9.675, 6.045)
rotation_mode = 0

[node name="Camera3D" type="Camera3D" parent="Path3D/PathFollow3D"]
transform = Transform3D(1, 0, 0, 0, 0.500008, 0.866039, 0, -0.866039, 0.500008, -0.0276399, 0.00410843, 0.0117126)

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.72297, 0)
pixel_size = 0.001
billboard = 1
fixed_size = true
text = "name"

[node name="ProjectileRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, 0, -1)
collide_with_bodies = false

[node name="SpawnPoint" type="Node3D" parent="ProjectileRay"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="MeshInstance3D" type="MeshInstance3D" parent="ProjectileRay/SpawnPoint"]
visible = false
mesh = SubResource("CapsuleMesh_kvtkm")

[node name="Abilities" type="Node" parent="."]
